# PyMake

./: .gitignore  CMakeLists.txt  README.md  main.py
example/: .run.sh  CMakeLists.txt
example/src/: main.cpp
example/src/hello/: hello.cpp
pymake/: CMakeLists.py  __init__.py  arguments.py  cli.py  commands.py  utils.py
